--- a/team/teamPage.html
+++ b/team/teamPage.html
@@ -13,4 +13,49 @@
        <header class="jumbotron" style="color: aliceblue; font-size: 25px; text-align: center; padding: 20px 15px; background-color:aquamarine;">
         <h2>My Team</h2>
        </header>
-    
+    <div class="d-flex p-2 justify-content-center">
+         <div class="card mb-5 mt-5 m-1 bg-white rounded" style="width: 18rem;">
+         <div class="card-body"
+            style="background-color:rgb(204,255,102);
+            color:(170,153,255)">
+                <h4 class="card-title p-1">Daphne</h4>
+                <h5 class="card-text">Manager</h5>
+         </div>
+            <ul class="list-group list-group-flush p-3">
+                <li class="list-group-item">ID: 123190</li>
+                <li class="list-group-item">
+                Email: <a href="mailto: daphne@gmail.com"> daphne@gmail.com</a></li>
+                <li class="list-group-item">555-555-5555</li>
+            </ul>
+         </div>
+        </div><div class="d-flex p-2 justify-content-center">
+         <div class="card mb-5 mt-5 m-1 bg-white rounded" style="width: 18rem;">
+         <div class="card-body"
+            style="background-color:rgb(204,255,102);
+            color:(170,153,255)">
+                <h4 class="card-title p-1">Zac</h4>
+                <h5 class="card-text">Engineer</h5>
+         </div>
+            <ul class="list-group list-group-flush p-3">
+                <li class="list-group-item">ID: 070291</li>
+                <li class="list-group-item">
+                Email: <a href="mailto: zac@gmail.com"> zac@gmail.com</a></li>
+                <li class="list-group-item">https://github.com/zjg39</li>
+            </ul>
+         </div>
+        </div><div class="d-flex p-2 justify-content-center">
+         <div class="card mb-5 mt-5 m-1 bg-white rounded" style="width: 18rem;">
+         <div class="card-body"
+            style="background-color:rgb(204,255,102);
+            color:(170,153,255)">
+                <h4 class="card-title p-1">Daniel</h4>
+                <h5 class="card-text">Intern</h5>
+         </div>
+            <ul class="list-group list-group-flush p-3">
+                <li class="list-group-item">ID: 050691</li>
+                <li class="list-group-item">
+                Email: <a href="mailto: daniel@gmail.com"> daniel@gmail.com</a></li>
+                <li class="list-group-item">KSU</li>
+            </ul>
+         </div>
+        </div>
